@@ -1,19 +1,11 @@
 package com.example.web.views;
 
-import com.example.shared.model.UserSession;
 import com.example.shared.model.VaultItem;
-import com.example.shared.service.AuthService;
 import com.example.shared.service.VaultItemService;
 import com.vaadin.flow.component.Component;
 import com.vaadin.flow.component.button.Button;
 import com.vaadin.flow.component.button.ButtonVariant;
-import com.vaadin.flow.component.html.Div;
-import com.vaadin.flow.component.html.H1;
-import com.vaadin.flow.component.html.H2;
-import com.vaadin.flow.component.html.H3;
-import com.vaadin.flow.component.html.H4;
-import com.vaadin.flow.component.html.Paragraph;
-import com.vaadin.flow.component.html.Span;
+import com.vaadin.flow.component.html.*;
 import com.vaadin.flow.component.icon.Icon;
 import com.vaadin.flow.component.icon.VaadinIcon;
 import com.vaadin.flow.component.notification.Notification;
@@ -23,244 +15,258 @@ import com.vaadin.flow.component.orderedlayout.HorizontalLayout;
 import com.vaadin.flow.component.orderedlayout.VerticalLayout;
 import com.vaadin.flow.component.tabs.Tab;
 import com.vaadin.flow.component.tabs.Tabs;
-import com.vaadin.flow.component.textfield.EmailField;
-import com.vaadin.flow.component.textfield.PasswordField;
+import com.vaadin.flow.component.tabs.TabsVariant;
 import com.vaadin.flow.component.textfield.TextArea;
 import com.vaadin.flow.component.textfield.TextField;
 import com.vaadin.flow.component.upload.Upload;
+import com.vaadin.flow.component.upload.receivers.MemoryBuffer;
 import com.vaadin.flow.router.PageTitle;
 import com.vaadin.flow.router.Route;
-import com.vaadin.flow.server.VaadinSession;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 
-/**
- * WEB VERSION - Main View
- *
- * This view now supports account registration/login and only shows items that
- * belong to the authenticated user.
- */
-@PageTitle("TimeVault - Your Digital Memory")
+@PageTitle("TimeVault - AI Digital Memory")
 @Route("")
 public class MainView extends VerticalLayout {
 
     private final VaultItemService vaultItemService;
-    private final AuthService authService;
+    private final Div itemsGrid = new Div();
+    private final Div currentView = new Div();
 
-    private UserSession currentUser;
-    private VerticalLayout itemsList;
-    private H3 recentSectionTitle;
-
-    private TextField searchField;
-    private Button browseButton;
-    private Button refreshButton;
-    private Button saveUrlButton;
-    private Button saveTextButton;
-    private Upload imageUpload;
-    private VerticalLayout authFormsLayout;
-    private VerticalLayout authSessionLayout;
-    private Span authSummary;
-    private Paragraph authMeta;
-    private EmailField loginEmailField;
-    private PasswordField loginPasswordField;
-    private EmailField registerEmailField;
-    private PasswordField registerPasswordField;
-    private PasswordField registerConfirmPasswordField;
+    // Navigation state
+    private String currentViewState = "home"; // "home" or "vault"
 
     @Autowired
-    public MainView(VaultItemService vaultItemService, AuthService authService) {
+    public MainView(VaultItemService vaultItemService) {
         this.vaultItemService = vaultItemService;
-        this.authService = authService;
-        this.currentUser = VaadinSession.getCurrent().getAttribute(UserSession.class);
 
         setSizeFull();
         setPadding(false);
         setSpacing(false);
+        setMargin(false);
         addClassName("main-view");
 
-        add(createHeader());
-        add(createAuthSection());
-        add(createHeroSection());
-        add(createContentSection());
-        add(createRecentItemsSection());
+        // Force white text styling
+        getStyle().set("color", "#ffffff");
 
-        refreshAuthState();
-        refreshRecentItems();
+        itemsGrid.addClassName("vault-grid");
+        itemsGrid.setWidthFull();
+        currentView.setSizeFull();
+
+        // Create main container with proper centering
+        VerticalLayout main = new VerticalLayout();
+        main.setSizeFull();
+        main.setPadding(false);
+        main.setSpacing(false);
+        main.setMargin(false);
+        main.setAlignItems(Alignment.CENTER);
+
+        // Force white text on main layout
+        main.getStyle().set("color", "#ffffff");
+
+        // Header spans full width
+        Component header = createHeader();
+        main.add(header);
+        main.setHorizontalComponentAlignment(Alignment.STRETCH, header);
+
+        // Navigation tabs
+        Component navTabs = createNavigationTabs();
+        main.add(navTabs);
+        main.setHorizontalComponentAlignment(Alignment.CENTER, navTabs);
+
+        // Content wrapper with max width and centered
+        VerticalLayout contentWrapper = new VerticalLayout();
+        contentWrapper.setMaxWidth("1200px");
+        contentWrapper.setWidth("100%");
+        contentWrapper.setPadding(true);
+        contentWrapper.setMargin(false);
+        contentWrapper.setSpacing(true);
+
+        // Add current view container
+        contentWrapper.add(currentView);
+
+        // Initialize with home view
+        showHomeView();
+
+        main.add(contentWrapper);
+        main.setHorizontalComponentAlignment(Alignment.CENTER, contentWrapper);
+        main.setFlexGrow(1, contentWrapper);
+
+        add(main);
+        setHorizontalComponentAlignment(Alignment.STRETCH, main);
     }
 
     private Component createHeader() {
         HorizontalLayout header = new HorizontalLayout();
+        header.addClassName("glass-header");
         header.setWidthFull();
+        header.getStyle().set("width", "100vw");
+        header.getStyle().set("margin-left", "calc(-50vw + 50%)");
+        header.getStyle().set("margin-right", "calc(-50vw + 50%)");
         header.setPadding(true);
-        header.addClassName("header");
         header.setAlignItems(FlexComponent.Alignment.CENTER);
         header.setJustifyContentMode(FlexComponent.JustifyContentMode.BETWEEN);
 
-        HorizontalLayout logo = new HorizontalLayout();
-        logo.setAlignItems(FlexComponent.Alignment.CENTER);
-        logo.setSpacing(true);
-        Icon vaultIcon = VaadinIcon.ARCHIVES.create();
-        vaultIcon.addClassName("logo-icon");
+        HorizontalLayout logoArea = new HorizontalLayout();
+        logoArea.setAlignItems(FlexComponent.Alignment.CENTER);
+        logoArea.setSpacing(true);
+
+        Icon vaultIcon = VaadinIcon.CUBE.create();
+        vaultIcon.setColor("#A78BFA"); // Neon purple icon
+        vaultIcon.setSize("32px");
+
         H1 title = new H1("TimeVault");
         title.addClassName("logo-text");
-        logo.add(vaultIcon, title);
 
-        searchField = new TextField();
-        searchField.setPlaceholder("Log in to search your vault");
+        logoArea.add(vaultIcon, title);
+
+        TextField searchField = new TextField();
+        searchField.setPlaceholder("Search your digital mind...");
         searchField.setPrefixComponent(VaadinIcon.SEARCH.create());
         searchField.addClassName("header-search");
-        searchField.setWidth("400px");
-        searchField.addValueChangeListener(event -> {
-            if (currentUser == null) {
-                return;
-            }
+        searchField.setClearButtonVisible(true);
 
-            try {
-                if (!event.getValue().isBlank()) {
-                    updateItemsList(vaultItemService.search(currentUser.id(), event.getValue()), "No results found");
-                    recentSectionTitle.setText("Search Results");
-                } else {
-                    loadRecentItems();
-                }
-            } catch (Exception exception) {
-                showError("Error: " + exception.getMessage());
+        searchField.addValueChangeListener(e -> {
+            if (e.getValue() != null && !e.getValue().trim().isEmpty()) {
+                updateItemsList(vaultItemService.searchComprehensive(e.getValue().trim()));
+            } else {
+                loadRecentItems();
             }
         });
 
-        browseButton = new Button("Browse My Vault", VaadinIcon.GRID.create());
-        browseButton.addThemeVariants(ButtonVariant.LUMO_TERTIARY);
-        browseButton.addClassName("header-button");
-        browseButton.addClickListener(event -> loadAllItems());
-
-        HorizontalLayout actions = new HorizontalLayout(searchField, browseButton);
-        actions.setAlignItems(FlexComponent.Alignment.CENTER);
-
-        header.add(logo, actions);
+        header.add(logoArea, searchField);
         return header;
     }
 
-    private Component createAuthSection() {
-        VerticalLayout section = new VerticalLayout();
-        section.setWidthFull();
-        section.setMaxWidth("900px");
-        section.setAlignSelf(Alignment.CENTER);
-        section.addClassName("auth-section");
+    private Component createNavigationTabs() {
+        Tab homeTab = new Tab(VaadinIcon.HOME.create(), new Span("Home"));
+        Tab vaultTab = new Tab(VaadinIcon.ARCHIVES.create(), new Span("Your Vault"));
 
-        H3 title = new H3("Account");
-        title.addClassName("section-title");
+        Tabs navTabs = new Tabs(homeTab, vaultTab);
+        navTabs.addClassName("nav-tabs");
+        navTabs.addThemeVariants(TabsVariant.LUMO_CENTERED);
 
-        Paragraph subtitle = new Paragraph(
-                "Register with email and password, then every upload and note is stored under your own user id."
-        );
-        subtitle.addClassName("panel-description");
-
-        authFormsLayout = new VerticalLayout();
-        authFormsLayout.setWidthFull();
-        authFormsLayout.setPadding(false);
-        authFormsLayout.setSpacing(false);
-        authFormsLayout.addClassName("auth-card");
-
-        Tab loginTab = new Tab("Log In");
-        Tab registerTab = new Tab("Register");
-        Tabs authTabs = new Tabs(loginTab, registerTab);
-        authTabs.addClassName("input-tabs");
-        authTabs.setWidthFull();
-
-        VerticalLayout loginPanel = createLoginPanel();
-        VerticalLayout registerPanel = createRegisterPanel();
-        registerPanel.setVisible(false);
-
-        authTabs.addSelectedChangeListener(event -> {
-            boolean loginSelected = authTabs.getSelectedTab() == loginTab;
-            loginPanel.setVisible(loginSelected);
-            registerPanel.setVisible(!loginSelected);
+        navTabs.addSelectedChangeListener(event -> {
+            Tab selectedTab = navTabs.getSelectedTab();
+            if (selectedTab == homeTab) {
+                showHomeView();
+            } else if (selectedTab == vaultTab) {
+                showVaultView();
+            }
         });
 
-        authFormsLayout.add(authTabs, loginPanel, registerPanel);
-
-        authSessionLayout = new VerticalLayout();
-        authSessionLayout.setWidthFull();
-        authSessionLayout.addClassName("auth-card");
-        authSessionLayout.setSpacing(true);
-        authSessionLayout.setVisible(false);
-
-        authSummary = new Span("Not signed in");
-        authSummary.addClassName("auth-summary");
-
-        authMeta = new Paragraph("Create an account to start building your personal vault.");
-        authMeta.addClassName("auth-meta");
-
-        Button logoutButton = new Button("Log Out", VaadinIcon.SIGN_OUT.create());
-        logoutButton.addThemeVariants(ButtonVariant.LUMO_TERTIARY);
-        logoutButton.addClickListener(event -> handleLogout());
-
-        authSessionLayout.add(authSummary, authMeta, logoutButton);
-
-        section.add(title, subtitle, authFormsLayout, authSessionLayout);
-        return section;
+        return navTabs;
     }
 
-    private VerticalLayout createLoginPanel() {
-        VerticalLayout panel = new VerticalLayout();
-        panel.setWidthFull();
-        panel.addClassName("auth-panel");
+    private void showHomeView() {
+        currentViewState = "home";
+        currentView.removeAll();
 
-        loginEmailField = new EmailField("Email");
-        loginEmailField.setPlaceholder("you@example.com");
-        loginEmailField.setWidthFull();
+        VerticalLayout homeContent = new VerticalLayout();
+        homeContent.setSpacing(true);
+        homeContent.setPadding(false);
+        homeContent.setAlignItems(Alignment.CENTER);
 
-        loginPasswordField = new PasswordField("Password");
-        loginPasswordField.setPlaceholder("Your password");
-        loginPasswordField.setWidthFull();
+        // Add hero section
+        homeContent.add(createHeroSection());
 
-        Button loginButton = new Button("Log In", VaadinIcon.SIGN_IN.create());
-        loginButton.addThemeVariants(ButtonVariant.LUMO_PRIMARY);
-        loginButton.addClickListener(event -> handleLogin());
+        // Add input section
+        homeContent.add(createContentSection());
 
-        panel.add(loginEmailField, loginPasswordField, loginButton);
-        return panel;
+        // Add recent items (limited to 3)
+        homeContent.add(createRecentItemsPreview());
+
+        currentView.add(homeContent);
     }
 
-    private VerticalLayout createRegisterPanel() {
-        VerticalLayout panel = new VerticalLayout();
-        panel.setWidthFull();
-        panel.addClassName("auth-panel");
+    private void showVaultView() {
+        currentViewState = "vault";
+        currentView.removeAll();
 
-        registerEmailField = new EmailField("Email");
-        registerEmailField.setPlaceholder("you@example.com");
-        registerEmailField.setWidthFull();
+        VerticalLayout vaultContent = new VerticalLayout();
+        vaultContent.setSpacing(true);
+        vaultContent.setPadding(false);
 
-        registerPasswordField = new PasswordField("Password");
-        registerPasswordField.setPlaceholder("At least 8 characters");
-        registerPasswordField.setWidthFull();
+        // Add vault header
+        H2 vaultTitle = new H2("Your Digital Vault");
+        vaultTitle.addClassName("section-title");
+        vaultContent.add(vaultTitle);
 
-        registerConfirmPasswordField = new PasswordField("Confirm Password");
-        registerConfirmPasswordField.setPlaceholder("Repeat your password");
-        registerConfirmPasswordField.setWidthFull();
+        // Add search functionality specific to vault
+        TextField vaultSearch = new TextField();
+        vaultSearch.setPlaceholder("Search your vault...");
+        vaultSearch.setPrefixComponent(VaadinIcon.SEARCH.create());
+        vaultSearch.addClassName("vault-search");
+        vaultSearch.setWidthFull();
+        vaultSearch.setMaxWidth("600px");
+        vaultSearch.setClearButtonVisible(true);
 
-        Button registerButton = new Button("Create Account", VaadinIcon.USER.create());
-        registerButton.addThemeVariants(ButtonVariant.LUMO_PRIMARY);
-        registerButton.addClickListener(event -> handleRegister());
+        vaultSearch.addValueChangeListener(e -> {
+            if (e.getValue() != null && !e.getValue().trim().isEmpty()) {
+                updateItemsList(vaultItemService.searchComprehensive(e.getValue().trim()));
+            } else {
+                loadAllItems();
+            }
+        });
 
-        panel.add(registerEmailField, registerPasswordField, registerConfirmPasswordField, registerButton);
-        return panel;
+        vaultContent.add(vaultSearch);
+        vaultContent.setHorizontalComponentAlignment(Alignment.CENTER, vaultSearch);
+
+        // Add all items grid
+        itemsGrid.removeAll();
+        loadAllItems();
+        vaultContent.add(itemsGrid);
+
+        currentView.add(vaultContent);
+    }
+
+    private String fetchWebpageContent(String url) {
+        try {
+            java.net.http.HttpClient client = java.net.http.HttpClient.newBuilder()
+                .connectTimeout(java.time.Duration.ofSeconds(10))
+                .build();
+
+            java.net.http.HttpRequest request = java.net.http.HttpRequest.newBuilder()
+                .uri(java.net.URI.create(url))
+                .header("User-Agent", "Mozilla/5.0 (TimeVault/1.0)")
+                .timeout(java.time.Duration.ofSeconds(15))
+                .build();
+
+            java.net.http.HttpResponse<String> response = client.send(request,
+                java.net.http.HttpResponse.BodyHandlers.ofString());
+
+            if (response.statusCode() == 200) {
+                // Extract text content from HTML
+                String content = response.body();
+                // Remove HTML tags for cleaner analysis
+                content = content.replaceAll("<script[^>]*>.*?</script>", "")
+                                .replaceAll("<style[^>]*>.*?</style>", "")
+                                .replaceAll("<[^>]+>", " ")
+                                .replaceAll("\\s+", " ")
+                                .trim();
+
+                // Limit content size
+                return content.length() > 5000 ? content.substring(0, 5000) + "..." : content;
+            } else {
+                return "Unable to fetch content from: " + url;
+            }
+        } catch (Exception e) {
+            return "Error fetching content: " + e.getMessage() + " URL: " + url;
+        }
     }
 
     private Component createHeroSection() {
         VerticalLayout hero = new VerticalLayout();
-        hero.setWidthFull();
-        hero.setPadding(true);
-        hero.setAlignItems(FlexComponent.Alignment.CENTER);
         hero.addClassName("hero-section");
+        hero.setAlignItems(FlexComponent.Alignment.CENTER);
+        hero.setJustifyContentMode(FlexComponent.JustifyContentMode.CENTER);
 
-        H2 heroTitle = new H2("Save Everything, Keep It Yours");
+        H2 heroTitle = new H2("Capture your digital mind.");
         heroTitle.addClassName("hero-title");
 
-        Paragraph heroSubtitle = new Paragraph(
-                "Each URL, image, and note is stored with account ownership so your vault stays tied to your login."
-        );
+        Paragraph heroSubtitle = new Paragraph("Powered by Gemini 2.0. Smart auto-tagging, vision analysis, and contextual memory.");
         heroSubtitle.addClassName("hero-subtitle");
 
         hero.add(heroTitle, heroSubtitle);
@@ -269,18 +275,18 @@ public class MainView extends VerticalLayout {
 
     private Component createContentSection() {
         VerticalLayout section = new VerticalLayout();
+        section.addClassName("modern-card");
         section.setWidthFull();
-        section.setMaxWidth("900px");
-        section.addClassName("content-section");
-        section.setAlignSelf(Alignment.CENTER);
+        section.setAlignItems(FlexComponent.Alignment.CENTER);
 
-        Tab urlTab = new Tab(VaadinIcon.LINK.create(), new Span("URL"));
-        Tab imageTab = new Tab(VaadinIcon.PICTURE.create(), new Span("Image"));
-        Tab textTab = new Tab(VaadinIcon.TEXT_LABEL.create(), new Span("Text"));
+        Tab urlTab = new Tab(VaadinIcon.LINK.create(), new Span("Web URL"));
+        Tab imageTab = new Tab(VaadinIcon.MAGIC.create(), new Span("Vision AI"));
+        Tab textTab = new Tab(VaadinIcon.TEXT_LABEL.create(), new Span("Smart Note"));
 
         Tabs tabs = new Tabs(urlTab, imageTab, textTab);
+        tabs.addThemeVariants(TabsVariant.LUMO_EQUAL_WIDTH_TABS, TabsVariant.LUMO_CENTERED);
         tabs.setWidthFull();
-        tabs.addClassName("input-tabs");
+        tabs.addClassName("modern-tabs");
 
         VerticalLayout urlPanel = createUrlPanel();
         VerticalLayout imagePanel = createImagePanel();
@@ -301,458 +307,475 @@ public class MainView extends VerticalLayout {
 
     private VerticalLayout createUrlPanel() {
         VerticalLayout panel = new VerticalLayout();
-        panel.setWidthFull();
+        panel.setPadding(false);
         panel.addClassName("input-panel");
+        panel.setAlignItems(FlexComponent.Alignment.CENTER);
+        panel.setDefaultHorizontalComponentAlignment(FlexComponent.Alignment.CENTER);
 
-        Paragraph description = new Paragraph(
-                "Paste any URL and save it under your account. Only you will see the entry tied to your user id."
-        );
-        description.addClassName("panel-description");
+        // Only force white text color, let CSS handle background
+        panel.getStyle().set("color", "#ffffff");
 
         TextField urlField = new TextField();
-        urlField.setPlaceholder("https://example.com/article");
+        urlField.setPlaceholder("Paste any link (e.g. https://github.com/...)");
         urlField.setPrefixComponent(VaadinIcon.LINK.create());
         urlField.setWidthFull();
-        urlField.addClassName("url-input");
+        urlField.addClassName("modern-input");
 
-        saveUrlButton = new Button("Save to Vault", VaadinIcon.DOWNLOAD.create());
-        saveUrlButton.addThemeVariants(ButtonVariant.LUMO_PRIMARY, ButtonVariant.LUMO_LARGE);
-        saveUrlButton.addClassName("save-button");
-        saveUrlButton.addClickListener(event -> {
-            UserSession user = requireAuthenticatedUser("Log in before saving a URL.");
-            if (user == null) {
-                return;
-            }
+        Button saveButton = new Button("Extract & Save to Vault", VaadinIcon.MAGIC.create());
+        saveButton.addClassName("modern-button");
+        saveButton.setWidthFull();
 
-            if (urlField.getValue().isBlank()) {
-                showError("Please enter a URL.");
-                return;
-            }
+        saveButton.addClickListener(e -> {
+            if (urlField.getValue().trim().isEmpty()) {
+                showNeonNotification("Please enter a valid URL", false);
+            } else {
+                try {
+                    String url = urlField.getValue().trim();
+                    // Add protocol if missing
+                    if (!url.startsWith("http://") && !url.startsWith("https://")) {
+                        url = "https://" + url;
+                    }
 
-            try {
-                String url = urlField.getValue();
-                String title = "URL: " + url.substring(0, Math.min(url.length(), 50));
-                String aiContext = "Saved URL content. AI context will be generated automatically.";
-                vaultItemService.saveUrl(user.id(), url, title, url, aiContext);
+                    showNeonNotification("Fetching webpage content...", true);
 
-                showSuccess("Saved URL to account #" + user.id() + ".");
-                urlField.clear();
-                refreshRecentItems();
-            } catch (Exception exception) {
-                showError("Error: " + exception.getMessage());
+                    // Fetch webpage content for better analysis
+                    String pageContent = fetchWebpageContent(url);
+
+                    // Save with AI-generated title and context
+                    vaultItemService.saveUrl(url, pageContent);
+                    showNeonNotification("Webpage saved & analyzed by AI!", true);
+                    urlField.clear();
+                    loadRecentItems();
+                } catch (Exception ex) {
+                    showNeonNotification("Error: " + ex.getMessage(), false);
+                }
             }
         });
 
-        Div features = new Div();
-        features.addClassName("features-list");
-        features.add(
-                createFeatureItem(VaadinIcon.USER, "Saved under your user id"),
-                createFeatureItem(VaadinIcon.TAG, "Auto-tagged by type, platform, and date"),
-                createFeatureItem(VaadinIcon.DOWNLOAD, "Stored with account ownership")
-        );
+        Paragraph description = new Paragraph("AI will automatically fetch the webpage, read the content, and generate a contextual summary.");
+        description.getStyle().set("color", "#ffffff");
 
-        panel.add(description, urlField, saveUrlButton, features);
+        panel.add(description, urlField, saveButton);
+
+        // Force white text on all components
+        panel.getChildren().forEach(component -> {
+            component.getElement().getStyle().set("color", "#ffffff");
+        });
+
         return panel;
     }
 
     private VerticalLayout createImagePanel() {
         VerticalLayout panel = new VerticalLayout();
-        panel.setWidthFull();
+        panel.setPadding(false);
         panel.addClassName("input-panel");
+        panel.setAlignItems(FlexComponent.Alignment.CENTER);
+        panel.setDefaultHorizontalComponentAlignment(FlexComponent.Alignment.CENTER);
 
-        Paragraph description = new Paragraph(
-                "Upload images, screenshots, or photos. The saved record is linked back to your account."
-        );
-        description.addClassName("panel-description");
+        // Only force white text color, let CSS handle background
+        panel.getStyle().set("color", "#ffffff");
 
-        imageUpload = new Upload();
-        imageUpload.setWidthFull();
-        imageUpload.setAcceptedFileTypes("image/*");
-        imageUpload.setDropLabel(new Span("Drop image here or click to browse"));
-        imageUpload.addClassName("image-upload");
+        MemoryBuffer buffer = new MemoryBuffer();
+        Upload upload = new Upload(buffer);
+        upload.setWidthFull();
+        upload.setAcceptedFileTypes("image/*");
+        upload.setMaxFiles(1);
+        upload.addClassName("modern-upload");
 
-        imageUpload.addSucceededListener(event -> {
-            UserSession user = requireAuthenticatedUser("Log in before uploading an image.");
-            if (user == null) {
-                return;
-            }
-
+        upload.addSucceededListener(event -> {
             try {
-                String title = "Image: " + event.getFileName();
-                String aiContext = "Image saved. AI analysis pending.";
-                vaultItemService.saveImage(user.id(), title, event.getFileName(), aiContext);
-
-                showSuccess("Saved image to account #" + user.id() + ".");
-                refreshRecentItems();
-            } catch (Exception exception) {
-                showError("Error: " + exception.getMessage());
+                byte[] fileData = buffer.getInputStream().readAllBytes();
+                vaultItemService.saveImage("Image: " + event.getFileName(), fileData, event.getMIMEType(), event.getFileName());
+                showNeonNotification("Image processed by Gemini Vision!", true);
+                loadRecentItems();
+            } catch (Exception ex) {
+                showNeonNotification("Error: " + ex.getMessage(), false);
             }
         });
 
-        Div features = new Div();
-        features.addClassName("features-list");
-        features.add(
-                createFeatureItem(VaadinIcon.USER, "Account ownership tracked"),
-                createFeatureItem(VaadinIcon.TAG, "Smart auto-tagging"),
-                createFeatureItem(VaadinIcon.CALENDAR, "Date and metadata preserved")
-        );
+        Paragraph description = new Paragraph("Upload an image. The AI Vision model will deeply analyze its contents and context.");
+        description.getStyle().set("color", "#ffffff");
 
-        panel.add(description, imageUpload, features);
+        panel.add(description, upload);
+
+        // Force white text on all components
+        panel.getChildren().forEach(component -> {
+            component.getElement().getStyle().set("color", "#ffffff");
+        });
+
         return panel;
     }
 
     private VerticalLayout createTextPanel() {
         VerticalLayout panel = new VerticalLayout();
-        panel.setWidthFull();
+        panel.setPadding(false);
         panel.addClassName("input-panel");
+        panel.setAlignItems(FlexComponent.Alignment.CENTER);
+        panel.setDefaultHorizontalComponentAlignment(FlexComponent.Alignment.CENTER);
 
-        Paragraph description = new Paragraph(
-                "Save notes, quotes, or ideas. Every text capture remains scoped to the signed-in account."
-        );
-        description.addClassName("panel-description");
+        // Only force white text color, let CSS handle background
+        panel.getStyle().set("color", "#ffffff");
 
         TextArea textArea = new TextArea();
-        textArea.setPlaceholder("Type or paste your text here...");
+        textArea.setPlaceholder("Dump your thoughts, meeting notes, or raw text here...");
         textArea.setWidthFull();
         textArea.setMinHeight("150px");
-        textArea.addClassName("text-input");
+        textArea.addClassName("modern-input");
 
-        saveTextButton = new Button("Save to Vault", VaadinIcon.DOWNLOAD.create());
-        saveTextButton.addThemeVariants(ButtonVariant.LUMO_PRIMARY, ButtonVariant.LUMO_LARGE);
-        saveTextButton.addClassName("save-button");
-        saveTextButton.addClickListener(event -> {
-            UserSession user = requireAuthenticatedUser("Log in before saving text.");
-            if (user == null) {
-                return;
-            }
+        Button saveButton = new Button("Synthesize Note", VaadinIcon.MAGIC.create());
+        saveButton.addClassName("modern-button");
+        saveButton.setWidthFull();
 
-            if (textArea.getValue().isBlank()) {
-                showError("Please enter some text.");
-                return;
-            }
-
-            try {
-                String content = textArea.getValue();
-                String title = "Note: " + content.substring(0, Math.min(content.length(), 50));
-                String aiContext = "Text note saved. AI context generated.";
-                vaultItemService.saveText(user.id(), title, content, aiContext);
-
-                showSuccess("Saved text to account #" + user.id() + ".");
-                textArea.clear();
-                refreshRecentItems();
-            } catch (Exception exception) {
-                showError("Error: " + exception.getMessage());
+        saveButton.addClickListener(e -> {
+            if (textArea.getValue().trim().isEmpty()) {
+                showNeonNotification("Text area is empty", false);
+            } else {
+                try {
+                    String content = textArea.getValue().trim();
+                    vaultItemService.saveText("Note: " + content.substring(0, Math.min(content.length(), 25)), content);
+                    showNeonNotification("Note synthesized & saved!", true);
+                    textArea.clear();
+                    loadRecentItems();
+                } catch (Exception ex) {
+                    showNeonNotification("Error: " + ex.getMessage(), false);
+                }
             }
         });
 
-        Div features = new Div();
-        features.addClassName("features-list");
-        features.add(
-                createFeatureItem(VaadinIcon.USER, "Owned by your account"),
-                createFeatureItem(VaadinIcon.TAG, "Automatic categorization"),
-                createFeatureItem(VaadinIcon.CLOCK, "Timestamped and searchable")
-        );
+        Paragraph description = new Paragraph("AI will extract key points, generate tags, and create a permanent memory of your text.");
+        description.getStyle().set("color", "#ffffff");
 
-        panel.add(description, textArea, saveTextButton, features);
+        panel.add(description, textArea, saveButton);
+
+        // Force white text on all components
+        panel.getChildren().forEach(component -> {
+            component.getElement().getStyle().set("color", "#ffffff");
+        });
+
         return panel;
-    }
-
-    private HorizontalLayout createFeatureItem(VaadinIcon iconName, String text) {
-        HorizontalLayout item = new HorizontalLayout();
-        item.setAlignItems(FlexComponent.Alignment.CENTER);
-        item.addClassName("feature-item");
-
-        Icon icon = iconName.create();
-        icon.setSize("16px");
-        icon.addClassName("feature-icon");
-
-        Span label = new Span(text);
-        label.addClassName("feature-text");
-
-        item.add(icon, label);
-        return item;
     }
 
     private Component createRecentItemsSection() {
         VerticalLayout section = new VerticalLayout();
         section.setWidthFull();
-        section.setMaxWidth("900px");
-        section.addClassName("recent-section");
-        section.setAlignSelf(Alignment.CENTER);
+        section.setPadding(false);
+        section.getStyle().set("margin-top", "2rem");
 
         HorizontalLayout sectionHeader = new HorizontalLayout();
         sectionHeader.setWidthFull();
         sectionHeader.setJustifyContentMode(FlexComponent.JustifyContentMode.BETWEEN);
         sectionHeader.setAlignItems(FlexComponent.Alignment.CENTER);
 
-        recentSectionTitle = new H3("Recent Saves");
-        recentSectionTitle.addClassName("section-title");
+        H3 sectionTitle = new H3("Your Vault");
+        sectionTitle.getStyle().set("color", "white");
+        sectionTitle.getStyle().set("font-weight", "800");
+        sectionTitle.getStyle().set("margin", "0");
 
-        refreshButton = new Button("Refresh", VaadinIcon.REFRESH.create());
-        refreshButton.addThemeVariants(ButtonVariant.LUMO_TERTIARY_INLINE);
-        refreshButton.addClickListener(event -> refreshRecentItems());
+        Button refreshBtn = new Button("Sync", VaadinIcon.REFRESH.create());
+        refreshBtn.addThemeVariants(ButtonVariant.LUMO_TERTIARY);
+        refreshBtn.getStyle().set("color", "#A78BFA");
+        refreshBtn.addClickListener(e -> loadRecentItems());
 
-        sectionHeader.add(recentSectionTitle, refreshButton);
+        sectionHeader.add(sectionTitle, refreshBtn);
 
-        itemsList = new VerticalLayout();
-        itemsList.setWidthFull();
-        itemsList.setPadding(false);
-        itemsList.setSpacing(true);
-        itemsList.addClassName("items-list");
+        loadRecentItems();
 
-        section.add(sectionHeader, itemsList);
+        section.add(sectionHeader, itemsGrid);
         return section;
     }
 
-    private void handleLogin() {
+    private Component createRecentItemsPreview() {
+        VerticalLayout section = new VerticalLayout();
+        section.setSpacing(false);
+        section.setPadding(false);
+        section.setMaxWidth("1000px");
+        section.setWidthFull();
+
+        HorizontalLayout headerLayout = new HorizontalLayout();
+        headerLayout.setWidthFull();
+        headerLayout.setJustifyContentMode(FlexComponent.JustifyContentMode.BETWEEN);
+        headerLayout.setAlignItems(FlexComponent.Alignment.CENTER);
+
+        H3 title = new H3("Recent Memories");
+        title.addClassName("section-title");
+        title.getStyle().set("color", "white");
+        title.getStyle().set("font-weight", "800");
+        title.getStyle().set("margin", "0");
+
+        Button viewAllButton = new Button("View All", VaadinIcon.ARROW_RIGHT.create());
+        viewAllButton.addThemeVariants(ButtonVariant.LUMO_TERTIARY);
+        viewAllButton.getStyle().set("color", "#A78BFA");
+        viewAllButton.addClickListener(e -> showVaultView());
+
+        headerLayout.add(title, viewAllButton);
+        section.add(headerLayout);
+
+        // Create preview grid for 3 recent items
+        Div previewGrid = new Div();
+        previewGrid.addClassName("vault-grid-preview");
+
         try {
-            currentUser = authService.authenticate(loginEmailField.getValue(), loginPasswordField.getValue());
-            VaadinSession.getCurrent().setAttribute(UserSession.class, currentUser);
-            loginPasswordField.clear();
-            refreshAuthState();
-            refreshRecentItems();
-            showSuccess("Signed in as " + currentUser.email() + ".");
-        } catch (Exception exception) {
-            showError(exception.getMessage());
-        }
-    }
-
-    private void handleRegister() {
-        if (!registerPasswordField.getValue().equals(registerConfirmPasswordField.getValue())) {
-            showError("Passwords do not match.");
-            return;
-        }
-
-        try {
-            currentUser = authService.register(registerEmailField.getValue(), registerPasswordField.getValue());
-            VaadinSession.getCurrent().setAttribute(UserSession.class, currentUser);
-            registerPasswordField.clear();
-            registerConfirmPasswordField.clear();
-            refreshAuthState();
-            refreshRecentItems();
-            showSuccess("Created account for " + currentUser.email() + ".");
-        } catch (Exception exception) {
-            showError(exception.getMessage());
-        }
-    }
-
-    private void handleLogout() {
-        currentUser = null;
-        VaadinSession.getCurrent().setAttribute(UserSession.class, null);
-        searchField.clear();
-        refreshAuthState();
-        refreshRecentItems();
-        showSuccess("Signed out.");
-    }
-
-    private UserSession requireAuthenticatedUser(String message) {
-        if (currentUser != null) {
-            return currentUser;
-        }
-        showError(message);
-        return null;
-    }
-
-    private void refreshAuthState() {
-        boolean authenticated = currentUser != null;
-
-        authFormsLayout.setVisible(!authenticated);
-        authSessionLayout.setVisible(authenticated);
-
-        if (authenticated) {
-            authSummary.setText("Signed in as " + currentUser.email());
-            authMeta.setText("Account #" + currentUser.id() + " owns every vault item you create in this session.");
-            searchField.setPlaceholder("Search your vault...");
-        } else {
-            authSummary.setText("Not signed in");
-            authMeta.setText("Create an account to start building your personal vault.");
-            searchField.setPlaceholder("Log in to search your vault");
-            loginEmailField.clear();
-            loginPasswordField.clear();
-            registerEmailField.clear();
-            registerPasswordField.clear();
-            registerConfirmPasswordField.clear();
+            List<VaultItem> recentItems = vaultItemService.findTop3Recent();
+            if (recentItems.isEmpty()) {
+                Div emptyState = new Div();
+                emptyState.addClassName("empty-state-preview");
+                emptyState.add(new H4("No memories yet..."));
+                emptyState.add(new Paragraph("Start saving URLs, images, and notes above to build your digital vault."));
+                previewGrid.add(emptyState);
+            } else {
+                for (VaultItem item : recentItems) {
+                    previewGrid.add(createVaultItemCard(item));
+                }
+            }
+        } catch (Exception e) {
+            showNeonNotification("Error loading recent items: " + e.getMessage(), false);
         }
 
-        searchField.setEnabled(authenticated);
-        browseButton.setEnabled(authenticated);
-        refreshButton.setEnabled(authenticated);
-        saveUrlButton.setEnabled(authenticated);
-        saveTextButton.setEnabled(authenticated);
-        imageUpload.setEnabled(authenticated);
-    }
-
-    private void loadRecentItems() {
-        recentSectionTitle.setText("Recent Saves");
-        updateItemsList(vaultItemService.findRecent(currentUser.id()), "Your vault is empty.");
+        section.add(previewGrid);
+        return section;
     }
 
     private void loadAllItems() {
-        if (requireAuthenticatedUser("Log in before browsing your vault.") == null) {
-            return;
-        }
         try {
-            recentSectionTitle.setText("All Saves");
-            updateItemsList(vaultItemService.findAll(currentUser.id()), "Your vault is empty.");
-        } catch (Exception exception) {
-            showError("Error: " + exception.getMessage());
+            updateItemsList(vaultItemService.findAll());
+        } catch (Exception e) {
+            showNeonNotification("Error loading items: " + e.getMessage(), false);
         }
     }
 
-    private void refreshRecentItems() {
-        itemsList.removeAll();
-
-        if (currentUser == null) {
-            recentSectionTitle.setText("Your Vault");
-            itemsList.add(createLoginRequiredState());
-            return;
-        }
-
-        try {
-            loadRecentItems();
-        } catch (Exception exception) {
-            itemsList.add(createErrorState(exception.getMessage()));
+    private void loadRecentItems() {
+        if (currentViewState.equals("home")) {
+            // Refresh the home view
+            showHomeView();
+        } else {
+            // Refresh the vault view
+            try {
+                updateItemsList(vaultItemService.findRecent());
+            } catch (Exception e) {
+                showNeonNotification("Error loading items: " + e.getMessage(), false);
+            }
         }
     }
 
-    private void updateItemsList(List<VaultItem> items, String emptyMessage) {
-        itemsList.removeAll();
+    private void updateItemsList(List<VaultItem> items) {
+        itemsGrid.removeAll();
 
         if (items.isEmpty()) {
-            itemsList.add(createEmptyState(emptyMessage));
-            return;
+            Div emptyState = new Div();
+            emptyState.addClassName("empty-state");
+            Icon cube = VaadinIcon.CUBE.create();
+            cube.setSize("48px");
+            cube.setColor("#64748b");
+            emptyState.add(cube);
+            emptyState.add(new H3("The vault is empty."));
+            emptyState.add(new Paragraph("Feed the AI your first link, image, or text snippet above."));
+            itemsGrid.add(emptyState);
+        } else {
+            // Apply staggered animation delay to cards
+            int delay = 0;
+            for (VaultItem item : items) {
+                Component card = createVaultItemCard(item);
+                card.getElement().getStyle().set("animation-delay", delay + "ms");
+                itemsGrid.add(card);
+                delay += 100; // 100ms delay for cascade effect
+            }
         }
-
-        for (VaultItem item : items) {
-            itemsList.add(createVaultItemCard(item));
-        }
-    }
-
-    private Component createLoginRequiredState() {
-        VerticalLayout empty = new VerticalLayout();
-        empty.setAlignItems(FlexComponent.Alignment.CENTER);
-        empty.setPadding(true);
-
-        Icon icon = VaadinIcon.LOCK.create();
-        icon.setSize("48px");
-        icon.setColor("var(--lumo-contrast-30pct)");
-
-        H4 title = new H4("Sign in to open your vault");
-        Paragraph text = new Paragraph("Register or log in above to see and save items under your own account.");
-
-        empty.add(icon, title, text);
-        return empty;
-    }
-
-    private Component createEmptyState(String message) {
-        VerticalLayout empty = new VerticalLayout();
-        empty.setAlignItems(FlexComponent.Alignment.CENTER);
-        empty.setPadding(true);
-
-        Icon icon = VaadinIcon.INBOX.create();
-        icon.setSize("48px");
-        icon.setColor("var(--lumo-contrast-30pct)");
-
-        H4 title = new H4("No items yet");
-        Paragraph text = new Paragraph(message);
-
-        empty.add(icon, title, text);
-        return empty;
-    }
-
-    private Component createErrorState(String message) {
-        VerticalLayout error = new VerticalLayout();
-        error.setAlignItems(FlexComponent.Alignment.CENTER);
-        error.setPadding(true);
-
-        Icon icon = VaadinIcon.WARNING.create();
-        icon.setSize("48px");
-        icon.setColor("var(--lumo-error-color)");
-
-        H4 title = new H4("Database Connection Error");
-        Paragraph text = new Paragraph("Check your SQL Server connection. Error: " + message);
-
-        error.add(icon, title, text);
-        return error;
     }
 
     private Component createVaultItemCard(VaultItem vaultItem) {
-        HorizontalLayout card = new HorizontalLayout();
-        card.setWidthFull();
-        card.setPadding(true);
-        card.addClassName("vault-item");
-        card.setAlignItems(FlexComponent.Alignment.START);
+        VerticalLayout card = new VerticalLayout();
+        card.addClassName("vault-card");
+        card.setSpacing(false);
 
-        VaadinIcon iconType = switch (vaultItem.getItemType()) {
-            case "URL" -> VaadinIcon.GLOBE;
-            case "IMAGE" -> VaadinIcon.PICTURE;
-            case "TEXT" -> VaadinIcon.TEXT_LABEL;
-            default -> VaadinIcon.FILE;
+        HorizontalLayout cardHeader = new HorizontalLayout();
+        cardHeader.setWidthFull();
+        cardHeader.setJustifyContentMode(FlexComponent.JustifyContentMode.BETWEEN);
+        cardHeader.setAlignItems(FlexComponent.Alignment.CENTER);
+
+        String type = vaultItem.getItemType() != null ? vaultItem.getItemType().toUpperCase() : "UNKNOWN";
+        String iconColor = switch (type) {
+            case "URL" -> "#60A5FA"; // Blue
+            case "IMAGE" -> "#F472B6"; // Pink
+            case "TEXT" -> "#34D399"; // Emerald
+            default -> "#94A3B8"; // Slate
         };
 
-        Div iconWrapper = new Div();
-        iconWrapper.addClassName("item-icon-wrapper");
-        Icon icon = iconType.create();
-        icon.addClassName("item-icon");
-        iconWrapper.add(icon);
+        Span typeBadge = new Span(type);
+        typeBadge.addClassName("type-badge");
+        typeBadge.getStyle().set("background-color", iconColor + "20");
+        typeBadge.getStyle().set("color", iconColor);
+        typeBadge.getStyle().set("border", "1px solid " + iconColor + "50");
 
-        VerticalLayout content = new VerticalLayout();
-        content.setPadding(false);
-        content.setSpacing(false);
-        content.addClassName("item-content");
-
-        H4 itemTitle = new H4(vaultItem.getTitle());
-        itemTitle.addClassName("item-title");
-
-        String previewSource = vaultItem.getAiContext() != null && !vaultItem.getAiContext().isBlank()
-                ? vaultItem.getAiContext()
-                : (vaultItem.getContent() == null ? "No content" : vaultItem.getContent());
-        String contextText = previewSource.length() > 150 ? previewSource.substring(0, 150) + "..." : previewSource;
-        Paragraph itemContext = new Paragraph(contextText);
-        itemContext.addClassName("item-context");
-
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MMM dd, yyyy HH:mm");
-        String metaText = vaultItem.getItemType() + " | Account #"
-                + (vaultItem.getOwner() == null ? "?" : vaultItem.getOwner().getId())
-                + " | "
-                + (vaultItem.getTags() != null ? vaultItem.getTags() : "No tags")
-                + " | "
-                + (vaultItem.getCreatedAt() != null ? vaultItem.getCreatedAt().format(formatter) : "");
-        Span itemMeta = new Span(metaText);
-        itemMeta.addClassName("item-meta");
-
-        content.add(itemTitle, itemContext, itemMeta);
-
-        Button deleteButton = new Button(VaadinIcon.TRASH.create());
-        deleteButton.addThemeVariants(ButtonVariant.LUMO_TERTIARY, ButtonVariant.LUMO_ICON, ButtonVariant.LUMO_ERROR);
-        deleteButton.addClassName("item-action");
-        deleteButton.addClickListener(event -> {
-            UserSession user = requireAuthenticatedUser("Log in before deleting items.");
-            if (user == null) {
-                return;
-            }
-
-            boolean deleted = vaultItemService.delete(user.id(), vaultItem.getId());
-            if (deleted) {
-                showSuccess("Deleted item #" + vaultItem.getId() + ".");
-                refreshRecentItems();
-            } else {
-                showError("That item no longer belongs to your account.");
-            }
+        Button deleteBtn = new Button(VaadinIcon.TRASH.create());
+        deleteBtn.addClassName("delete-btn");
+        deleteBtn.addClickListener(e -> {
+            vaultItemService.delete(vaultItem.getId());
+            loadRecentItems();
+            showNeonNotification("Memory erased.", true);
         });
 
-        card.add(iconWrapper, content, deleteButton);
-        card.expand(content);
+        cardHeader.add(typeBadge, deleteBtn);
+
+        String safeTitle = vaultItem.getTitle() != null && !vaultItem.getTitle().trim().isEmpty()
+                ? vaultItem.getTitle() : "Untitled Memory";
+        H4 title = new H4(safeTitle);
+        title.addClassName("card-title");
+
+        // AI Context Box
+        Div contextWrapper = new Div();
+        contextWrapper.addClassName("card-context-wrapper");
+
+        Span aiLabel = new Span("✨ AI Summary");
+        aiLabel.addClassName("ai-label");
+
+        String safeContext = vaultItem.getAiContext() != null && !vaultItem.getAiContext().trim().isEmpty()
+                ? vaultItem.getAiContext() : "Awaiting AI analysis...";
+        Paragraph context = new Paragraph(safeContext);
+        context.addClassName("card-context");
+
+        contextWrapper.add(aiLabel, context);
+
+        HorizontalLayout cardFooter = new HorizontalLayout();
+        cardFooter.addClassName("card-footer");
+        cardFooter.setWidthFull();
+        cardFooter.setJustifyContentMode(FlexComponent.JustifyContentMode.BETWEEN);
+        cardFooter.setAlignItems(FlexComponent.Alignment.CENTER);
+
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MMM dd, yyyy");
+        String dateString = vaultItem.getCreatedAt() != null ? vaultItem.getCreatedAt().format(formatter) : "Unknown Date";
+        Span dateStr = new Span(dateString);
+        dateStr.addClassName("card-date");
+
+        // Speak button for text-to-speech
+        Button speakBtn = new Button(VaadinIcon.VOLUME_UP.create());
+        speakBtn.addClassName("speak-btn");
+        speakBtn.setTooltipText("Listen to AI summary");
+        speakBtn.getStyle().set("color", "#A78BFA");
+        speakBtn.getStyle().set("background", "transparent");
+        speakBtn.getStyle().set("border", "none");
+        speakBtn.getStyle().set("cursor", "pointer");
+        speakBtn.getStyle().set("padding", "8px");
+        speakBtn.getStyle().set("border-radius", "50%");
+        speakBtn.getStyle().set("transition", "all 0.3s ease");
+
+        // Add hover effect
+        speakBtn.addClickListener(e -> {
+            speakText(safeContext);
+        });
+
+        // Button group for actions
+        HorizontalLayout buttonGroup = new HorizontalLayout(speakBtn);
+        buttonGroup.setSpacing(false);
+        buttonGroup.setAlignItems(FlexComponent.Alignment.CENTER);
+
+        cardFooter.add(dateStr, buttonGroup);
+
+        card.add(cardHeader, title, contextWrapper, cardFooter);
         return card;
     }
 
-    private void showSuccess(String message) {
-        Notification notification = Notification.show(message, 3000, Notification.Position.BOTTOM_END);
-        notification.addThemeVariants(NotificationVariant.LUMO_SUCCESS);
+    /**
+     * Use ElevenLabs to speak the AI summary text
+     */
+    private void speakText(String text) {
+        if (text == null || text.trim().isEmpty() || "Awaiting AI analysis...".equals(text)) {
+            showNeonNotification("No AI summary available to read", false);
+            return;
+        }
+
+        // Add JavaScript to call the speech API and play audio
+        getElement().executeJs("""
+            async function speakText(text) {
+                try {
+                    // Show loading notification
+                    const notification = document.createElement('div');
+                    notification.style.cssText = `
+                        position: fixed;
+                        top: 20px;
+                        right: 20px;
+                        background: linear-gradient(135deg, #60A5FA 0%, #A78BFA 50%, #F472B6 100%);
+                        color: white;
+                        padding: 15px 20px;
+                        border-radius: 12px;
+                        z-index: 10000;
+                        font-family: 'Plus Jakarta Sans', sans-serif;
+                        font-weight: 600;
+                        box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+                    `;
+                    notification.textContent = '🗣️ Generating speech...';
+                    document.body.appendChild(notification);
+
+                    const response = await fetch('/api/speech/synthesize', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({ text: text })
+                    });
+
+                    const result = await response.json();
+                    
+                    // Remove loading notification
+                    document.body.removeChild(notification);
+
+                    if (result.success) {
+                        // Create and play audio
+                        const audio = new Audio(result.audio);
+                        
+                        // Show playing notification
+                        const playNotification = document.createElement('div');
+                        playNotification.style.cssText = notification.style.cssText;
+                        playNotification.textContent = '🔊 Playing AI summary...';
+                        document.body.appendChild(playNotification);
+                        
+                        audio.onended = () => {
+                            document.body.removeChild(playNotification);
+                        };
+                        
+                        audio.onerror = () => {
+                            document.body.removeChild(playNotification);
+                            const errorNotification = document.createElement('div');
+                            errorNotification.style.cssText = notification.style.cssText.replace('60A5FA 0%, #A78BFA 50%, #F472B6', 'EF4444 0%, #DC2626 50%, #B91C1C');
+                            errorNotification.textContent = '❌ Audio playback failed';
+                            document.body.appendChild(errorNotification);
+                            setTimeout(() => document.body.removeChild(errorNotification), 3000);
+                        };
+                        
+                        await audio.play();
+                    } else {
+                        throw new Error(result.error || 'Speech synthesis failed');
+                    }
+                } catch (error) {
+                    console.error('Speech error:', error);
+                    
+                    // Show error notification
+                    const errorNotification = document.createElement('div');
+                    errorNotification.style.cssText = `
+                        position: fixed;
+                        top: 20px;
+                        right: 20px;
+                        background: linear-gradient(135deg, #EF4444 0%, #DC2626 50%, #B91C1C 100%);
+                        color: white;
+                        padding: 15px 20px;
+                        border-radius: 12px;
+                        z-index: 10000;
+                        font-family: 'Plus Jakarta Sans', sans-serif;
+                        font-weight: 600;
+                        box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+                    `;
+                    errorNotification.textContent = '❌ Speech generation failed: ' + error.message;
+                    document.body.appendChild(errorNotification);
+                    setTimeout(() => document.body.removeChild(errorNotification), 5000);
+                }
+            }
+            
+            speakText($0);
+            """, text);
     }
 
-    private void showError(String message) {
-        Notification notification = Notification.show(message, 4000, Notification.Position.MIDDLE);
-        notification.addThemeVariants(NotificationVariant.LUMO_ERROR);
+    private void showNeonNotification(String text, boolean success) {
+        Notification notification = new Notification(text, 3000, Notification.Position.BOTTOM_END);
+        notification.addThemeVariants(success ? NotificationVariant.LUMO_SUCCESS : NotificationVariant.LUMO_ERROR);
+        notification.open();
     }
 }
